Fixing tabs alignments

--- a/style/about.css
+++ b/style/about.css
@@ -362,15 +362,15 @@ body {
     align-items: center;
     width: 100%;
     padding: 10px;
+    height: auto;
     flex-direction: row; 
 }
 @media screen and (max-width: 480px) {
     .containers_wrapper {
         flex-direction: column; 
         margin-top: 60%;
-        height: 100%;
-        width: 100%;
-        padding-top: 10%;
+        height: auto;
+        width: 96%;
     }
 }
 @media screen and (min-width: 481px) {
